--- a/Analysis.html
+++ b/Analysis.html
@@ -59,7 +59,37 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 </div>
 
 
-
+<div id="synopsis" class="section level2">
+<h2>Synopsis</h2>
+</div>
+<div id="data-processing" class="section level2">
+<h2>Data Processing</h2>
+</div>
+<div id="results" class="section level2">
+<h2>Results</h2>
+</div>
+<div id="conclusions" class="section level2">
+<h2>Conclusions</h2>
+<div id="appendix-to-be-removed-assignment-requirements" class="section level3">
+<h3>Appendix (to be removed): Assignment requirements</h3>
+<ol style="list-style-type: decimal">
+<li>Mandatory sections:
+<ul>
+<li>Synopsis</li>
+<li>Data Processing</li>
+<li>Results</li>
+</ul></li>
+<li><p>All code must be shown</p></li>
+<li><p>Figures: no less than one, no more than three.</p></li>
+<li><p>Assignment description:<br /> <em>Your data analysis must address the following questions:</em></p>
+<ul>
+<li><p><em>Across the United States, which types of events (as indicated in the EVTYPE variable) are most harmful with respect to population health?</em></p></li>
+<li><p><em>Across the United States, which types of events have the greatest economic consequences?</em></p></li>
+</ul>
+<p><em>Consider writing your report as if it were to be read by a government or municipal manager who might be responsible for preparing for severe weather events and will need to prioritize resources for different types of events. However, there is no need to make any specific recommendations in your report.</em></p></li>
+</ol>
+</div>
+</div>
 
 
 </div>
